unpackaged/objects/TorneioEvento__c.object
<CustomObject>
    <fields>
        <fullName>DataInicioLevel__c</fullName>
        <label>Data Inicio Level</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Data__c</fullName>
        <label>Data</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Estrutura__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Estrutura</label>
        <referenceTo>TorneioEstrutura__c</referenceTo>
        <relationshipLabel>Torneio Eventos</relationshipLabel>
        <relationshipName>Torneio_Eventos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Nivel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Nível</label>
        <referenceTo>TorneioNivel__c</referenceTo>
        <relationshipLabel>Torneio Eventos</relationshipLabel>
        <relationshipName>Torneio_Eventos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Não Iniciado</fullName>
                    <default>true</default>
                    <label>Não Iniciado</label>
                </value>
                <value>
                    <fullName>Em Andamento</fullName>
                </value>
                <value>
                    <fullName>Finalizado</fullName>
                </value>
                <value>
                    <fullName>Parado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TempoLevel__c</fullName>
        <label>Tempo Level</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Torneio__c</fullName>
        <label>Torneio</label>
        <referenceTo>Torneio__c</referenceTo>
        <relationshipLabel>Torneio Eventos</relationshipLabel>
        <relationshipName>Torneio_Eventos</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TotalAddOn__c</fullName>
        <label>Total Add On</label>
        <summaryFilterItems>
            <field>TorneioCompra__c.Tipo__c</field>
            <operation>equals</operation>
            <value>Add On</value>
        </summaryFilterItems>
        <summaryForeignKey>TorneioCompra__c.TorneioEvento__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalArrecadado__c</fullName>
        <label>Total Arrecadado</label>
        <summarizedField>TorneioCompra__c.ValorTotal__c</summarizedField>
        <summaryForeignKey>TorneioCompra__c.TorneioEvento__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalBuyIn__c</fullName>
        <label>Total Buy In</label>
        <summaryFilterItems>
            <field>TorneioCompra__c.Tipo__c</field>
            <operation>equals</operation>
            <value>Buy In</value>
        </summaryFilterItems>
        <summaryForeignKey>TorneioCompra__c.TorneioEvento__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalFichas__c</fullName>
        <label>Total Fichas</label>
        <summarizedField>TorneioCompra__c.Fichas__c</summarizedField>
        <summaryForeignKey>TorneioCompra__c.TorneioEvento__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalPlayers__c</fullName>
        <label>Total Players</label>
        <summaryFilterItems>
            <field>TorneioInscricao__c.Status__c</field>
            <operation>equals</operation>
            <value>Inscrito</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>TorneioInscricao__c.StatusPlayer__c</field>
            <operation>notEqual</operation>
            <value>Caiu</value>
        </summaryFilterItems>
        <summaryForeignKey>TorneioInscricao__c.Torneio_Evento__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalRebuy__c</fullName>
        <label>Total Rebuy</label>
        <summaryFilterItems>
            <field>TorneioCompra__c.Tipo__c</field>
            <operation>equals</operation>
            <value>Rebuy</value>
        </summaryFilterItems>
        <summaryForeignKey>TorneioCompra__c.TorneioEvento__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalTaxa__c</fullName>
        <label>Total Taxa</label>
        <summarizedField>TorneioCompra__c.Valor__c</summarizedField>
        <summaryFilterItems>
            <field>TorneioCompra__c.Tipo__c</field>
            <operation>equals</operation>
            <value>Taxa BuyIn, Taxa Rebuy</value>
        </summaryFilterItems>
        <summaryForeignKey>TorneioCompra__c.TorneioEvento__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalTimeChip__c</fullName>
        <label>Total Time Chip</label>
        <summaryFilterItems>
            <field>TorneioCompra__c.Tipo__c</field>
            <operation>equals</operation>
            <value>Time Chip</value>
        </summaryFilterItems>
        <summaryForeignKey>TorneioCompra__c.TorneioEvento__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ValorArrecadado__c</fullName>
        <label>Valor Arrecadado</label>
        <summarizedField>TorneioCompra__c.Valor__c</summarizedField>
        <summaryFilterItems>
            <field>TorneioCompra__c.Tipo__c</field>
            <operation>equals</operation>
            <value>Buy In, Rebuy, Add On</value>
        </summaryFilterItems>
        <summaryForeignKey>TorneioCompra__c.TorneioEvento__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ValorCartaoCredito__c</fullName>
        <label>Valor Cartão Crédito</label>
        <summarizedField>TorneioCompra__c.ValorTotal__c</summarizedField>
        <summaryFilterItems>
            <field>TorneioCompra__c.FormaPagamento__c</field>
            <operation>equals</operation>
            <value>Cartão/Crédito</value>
        </summaryFilterItems>
        <summaryForeignKey>TorneioCompra__c.TorneioEvento__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ValorCartaoDebito__c</fullName>
        <label>Valor Cartão Débito</label>
        <summarizedField>TorneioCompra__c.ValorTotal__c</summarizedField>
        <summaryFilterItems>
            <field>TorneioCompra__c.FormaPagamento__c</field>
            <operation>equals</operation>
            <value>Cartão/Débito</value>
        </summaryFilterItems>
        <summaryForeignKey>TorneioCompra__c.TorneioEvento__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ValorDinheiro__c</fullName>
        <label>Valor Dinheiro</label>
        <summarizedField>TorneioCompra__c.ValorTotal__c</summarizedField>
        <summaryFilterItems>
            <field>TorneioCompra__c.FormaPagamento__c</field>
            <operation>equals</operation>
            <value>Dinheiro</value>
        </summaryFilterItems>
        <summaryForeignKey>TorneioCompra__c.TorneioEvento__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Torneio Evento</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Torneio__c</columns>
        <columns>NAME</columns>
        <columns>Data__c</columns>
        <columns>TotalBuyIn__c</columns>
        <columns>TotalRebuy__c</columns>
        <columns>TotalAddOn__c</columns>
        <columns>ValorArrecadado__c</columns>
        <columns>TotalArrecadado__c</columns>
        <filterScope>Everything</filterScope>
        <label>Tudo</label>
    </listViews>
    <nameField>
        <label>Nome de Torneio Evento</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Torneio Eventos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>